2003-11-23 Klaus Flittner <klaus_flittner@gmx.de>

	fixed bug #845089
	* src/SDCCbitv.h,
	* src/SDCCbitv.c: added function to free a bitvector
	* src/SDCClrange.h,
	* src/SDCClrange.c: added function to recompute the liveranges
	* src/avr/ralloc.c,
	* src/ds390/ralloc.c,
	* src/hc08/ralloc.c,
	* src/mcs51/ralloc.c,
	* src/pic/ralloc.c,
	* src/pic16/ralloc.c,
	* src/xa51/ralloc.c,
	* src/z80/ralloc.c: recompute the liveranges after register packing

2003-11-21 Klaus Flittner <klaus_flittner@gmx.de>

	* src/SDCCloop.c (newInduction): fixed bug #845630

2003-11-21 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (compareTypesExact): disabled debugging output
	inadvertantly left behind from my 2003-11-12 change

2003-11-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Updated headers I neglected to commit yesterday.
	* src/SDCClrange.h,
	* src/SDCCicode.h

2003-11-19 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCcse.c (algebraicOpts): fixed bug #773153
	* src/SDCClrange.c (rlivePoint): need to mark IC_RESULT used if POINTER_SET op
	* src/SDCCopt.c (eBBlockFromiCode),
	* src/SDCClrange.c (hashiCodeKeys, sequenceiCode, computeLiveRanges): seperated
	the creation of the key hash table from the sequencing so it can be used
	earlier (for some GCSE bug fixes still pending)

2003-11-15 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genPlus): generate shortcut for adding 0xab00
	* support/regression/tests/addsub.c: testing genPlus shortcut

2003-11-15  Borut Razem <borut.razem@siol.net>

	* src/SDCCmain.c: fixed bug #841645: -MM command line option passed to sdcpp

2003-11-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): fixed bug #527779
	* src/SDCCcse.c (deleteGetPointers): rewrote so that the set
	ordering is immaterial.
	* src/SDCCdflow.c (mergeInExprs): fixed bug #587536

2003-11-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>
	